--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,7 @@
 
       // 3️⃣ Fallback to AI
     // --- STREAMING RESPONSE HANDLER ---
+// 3️⃣ Fallback to AI (streaming mode)
 const response = await fetch("https://ai-question-and-its-solution-4kxy.onrender.com/ask-ai", {
   method: "POST",
   headers: { "Content-Type": "application/json" },
@@ -171,39 +172,40 @@ if (!response.ok) {
   return "❌ Error fetching AI response.";
 }
 
-const reader = response.body.getReader();
-const decoder = new TextDecoder("utf-8");
-let fullText = "";
+// Prepare UI
 resultBox.innerHTML = "<b>G10EP AI Answer (streaming):</b><br><div id='streamOutput'></div>";
 const streamDiv = document.getElementById("streamOutput");
 
+const reader = response.body.getReader();
+const decoder = new TextDecoder();
+let fullText = "";
+
+// Read stream progressively
 while (true) {
   const { done, value } = await reader.read();
   if (done) break;
   const chunk = decoder.decode(value, { stream: true });
   fullText += chunk;
 
-  // Format incrementally
   const formatted = fullText
-    .replace(/(Step\s*\d+[:.]?)/gi, '<span style="color:#007bff; font-weight:bold;">$1</span>')
+    .replace(/(Step\\s*\\d+[:.]?)/gi, '<span style="color:#007bff; font-weight:bold;">$1</span>')
     .replaceAll("**", "")
     .replaceAll("-", "<br>•")
     .replaceAll("\n", "<br>");
 
   streamDiv.innerHTML = formatted;
-  // Re-render math dynamically
-  if (window.MathJax && MathJax.typesetPromise) {
-    MathJax.typesetPromise([streamDiv]);
-  }
+
+  // Live MathJax rendering (debounced for performance)
+  clearTimeout(window._mjTimer);
+  window._mjTimer = setTimeout(() => {
+    if (window.MathJax && MathJax.typesetPromise) {
+      MathJax.typesetPromise([streamDiv]);
+    }
+  }, 300);
 }
 
-// Done streaming
-return ""; // we already filled resultBox live
-
-
-
-
-    }
+return ""; // already displayed live
+}
 
     function searchByCode(code){
       for(let subj in questionBanks){
