--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,6 @@
       biology: "https://ai-question-and-its-solution-4kxy.onrender.com/biology"
     };
 
-    // preload question banks
     for (let subj in subjectUrls) {
       fetch(subjectUrls[subj])
         .then(r => r.json())
@@ -107,7 +106,6 @@
       if(item.code) html += `<p><b>Code:</b> ${item.code}</p>`;
       html += `<p><b>Question:</b> <span class='mathjax'>${item.question?.text || "❌ Not found"}</span></p>`;
       html += `<p><b>Solution:</b> <span class='mathjax'>${item.solution?.text || "❌ Not found"}</span></p>`;
-
       if(item.solution_steps?.length){
         html += `<p><b>Solution Steps:</b></p><ul>`;
         item.solution_steps.forEach(step=>{
@@ -115,7 +113,6 @@
         });
         html += `</ul>`;
       }
-
       setTimeout(()=>MathJax.typesetPromise(),100);
       return html;
     }
@@ -131,16 +128,15 @@
         if(res.length && res[0].score < 0.4) return renderQA(res[0].item, subj);
       }
 
-      // fallback to AI
+      // fallback to AI (streaming)
       const response = await fetch("https://ai-question-and-its-solution-4kxy.onrender.com/ask-ai", {
         method: "POST",
         headers: {"Content-Type":"application/json"},
         body: JSON.stringify({question:text})
       });
-
       if(!response.ok) return "❌ Error fetching AI response.";
 
-      resultBox.innerHTML = "<b>G10EP AI Answer (streaming):</b><br><div id='streamOutput'></div>";
+      resultBox.innerHTML += "<hr><b>G10EP AI Answer (streaming):</b><br><div id='streamOutput'></div>";
       const streamDiv = document.getElementById("streamOutput");
       const reader = response.body.getReader();
       const decoder = new TextDecoder();
@@ -153,7 +149,7 @@
         fullText += chunk;
 
         streamDiv.innerHTML = fullText
-          .replace(/(Step\s*\d+[:.]?)/gi, '<b style="color:#007bff">$1</b>')
+          .replace(/(Step\\s*\\d+[:.]?)/gi, '<b style="color:#007bff">$1</b>')
           .replaceAll("**","")
           .replaceAll("-", "<br>•")
           .replaceAll("\n","<br>");
@@ -172,7 +168,6 @@
       return "❌ No question found with this code.";
     }
 
-    // mode toggle
     document.querySelectorAll('input[name="mode"]').forEach(r=>{
       r.addEventListener("change", e=>{
         document.getElementById("imageMode").classList.toggle("hidden", e.target.value!=="image");
@@ -191,7 +186,6 @@
     const progressBar = document.getElementById("progressBar");
     const progressText = document.getElementById("progressText");
 
-    // IMAGE UPLOAD FIXED
     fileInput.addEventListener("change", e=>{
       const file = e.target.files[0];
       if(!file) return;
@@ -228,11 +222,14 @@
       progressBar.style.width="85%";
       progressText.textContent="🔍 Searching or generating answer...";
 
+      // show extracted text first, then append answer
+      resultBox.innerHTML = `<b>Extracted Text:</b><br>${text}<br>`;
       const answerHTML = await searchSolution(text);
+
+      if(answerHTML) resultBox.innerHTML += `<hr>${answerHTML}`;
       progressBar.style.width="100%";
       progressContainer.style.display="none";
 
-      resultBox.innerHTML = `<b>Extracted Text:</b><br>${text}<hr>${answerHTML}`;
       MathJax.typesetPromise();
     };
 
